refactor: ability id no longer being enum